--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@types/jest": "^29.5.14",
     "axios": "^1.7.9",
     "jest": "^29.7.0",
-    "jest-cucumber": "^4.5.0",
-    "jest-html-reporter": "^3.10.2"
+    "jest-cucumber": "^4.5.0"
   }
 }
